# gsuid-nonebot

./: .env.prod  .gitmodules  docker-compose.yaml  pyproject.toml  setup  start
app/nonebot/: .env.prod  pyproject.toml  start
data/gsuid-core/: start
gsuid-core/: .gitignore  setup
